admin course edit lessons add -front

--- a/cli/src/app/features/admin/course-management/course-management.component.html
+++ b/cli/src/app/features/admin/course-management/course-management.component.html
@@ -168,6 +168,7 @@
       (selectAll)="onSelectAll($event)"
       (viewCourse)="onViewCourse($event)"
       (editCourse)="openEditModal($event)"
+      (editContent)="onEditContent($event)"
       (restoreCourse)="onRestoreCourse($event)"
       (deleteCourse)="onDeleteCourse($event)"
       (statusChange)="onStatusChange($event)"
