--- a/cli/src/styles.css
+++ b/cli/src/styles.css
@@ -65,6 +65,9 @@
 .icon-trending-up::before {
   content: "📈";
 }
+.icon-trending-down::before {
+  content: "📉";
+}
 .icon-facebook::before {
   content: "f";
 }
